--- a/public/css/sass/components/segment/segmentFooter.scss
+++ b/public/css/sass/components/segment/segmentFooter.scss
@@ -132,7 +132,7 @@
     }
 
     .ai-feature-content-error {
-      color: colors.$grey6;
+      color: colors.$grey700;
 
       > span {
         font-weight: bold;
